# deep-photometric-stereo-network

./: Dockerfile  LICENSE  README.md  dataset.py  download_blobs.sh  download_diligent.sh  download_merl_brdf_database.sh  load_diligent.py  model.py  params.py  rendering_with_merl.py  train.py
merl_brdf_database/: BRDFRead.cpp  CMakeLists.txt  merl_brdf.py
